--- a/src/component/tic.css
+++ b/src/component/tic.css
@@ -7,6 +7,7 @@
   
     flex-direction: column; /* Pour aligner verticalement le contenu */
     background-color: #080219;
+    
   }
   
   /* Ajoutez d'autres styles selon vos besoins */
@@ -123,4 +124,28 @@ table {
   tbody tr:last-child {
     border-bottom: none;
   }
+  button {
+    color: color-white;
+    width: 100%;
+    font-size: 1.4rem;
+    background: primary-color;
+    border-radius: border-radius;
+    border: none;
+    cursor: pointer;
+    padding: 0.4rem 1.2rem;
+    margin-top: 0.5rem;
+  }
+  label {
+    font-size: 1.4rem;
+    margin-bottom: 0.5rem;
+    color: #9fc6d4;
+    
+  }
   
+  input {
+    border: 2px solid rgba(red);
+    border-radius: border-radius;
+    padding: 0.5rem 0.5rem;
+    padding-left: 1rem;
+    font-size: 1rem;
+  }
